fix topic approval

--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -14,6 +14,8 @@
     var maxItemsToShow_topic = '{MAX_ITEMS_TO_SHOW_TOPIC}';
     var maxItemsToShow_user = '{MAX_ITEMS_TO_SHOW_USER}';
 
+    var LIVE_SEARCH_SHOW_IN_NEW_WINDOW = '{LIVE_SEARCH_SHOW_IN_NEW_WINDOW}';
+
 </script>
 <!-- INCLUDEJS jquery-ui.min.js -->
 <!-- INCLUDEJS jquery.autocomplete.js -->
