--- a/styles/prosilver/template/event/overall_header_page_body_before.html
+++ b/styles/prosilver/template/event/overall_header_page_body_before.html
@@ -1,18 +1,19 @@
  <!-- IF S_LIVE_SEARCH --> 
+ <div id='leavesearch_btn'>{L_LIVE_SEARCH_CAPTION}</div>
+<div id='leavesearch_panel'>
+    <div id='leavesearch' style='margin:30px 0 2 px 0;'>&nbsp; 
+     <!-- IF LIVE_SEARCH_ON_OFF_FORUM --> 
+     {L_LIVE_SEARCH_FORUM}: <input  class="inputbox search tiny" id="forum_live_search" type=search placeholder="{L_LIVE_SEARCH_FORUM_TXT}"  title="{L_LIVE_SEARCH_FORUM_T}" /> &nbsp;&nbsp;
+      <!-- ENDIF  -->
+      <!-- IF LIVE_SEARCH_ON_OFF_TOPIC --> 
+     {L_LIVE_SEARCH_TOPIC}: <input  class="inputbox search tiny" id="topic_live_search" type=search placeholder="{L_LIVE_SEARCH_TXT}"  title="{L_LIVE_SEARCH_T}" /> &nbsp;&nbsp;
+      <!-- ENDIF  -->
 
-<div id='leavesearch' style='padding:5px 0 2 px 0;display:inline-block;''>{L_LIVE_SEARCH_CAPTION}&nbsp; 
- <!-- IF LIVE_SEARCH_ON_OFF_FORUM --> 
- {L_LIVE_SEARCH_FORUM}: <input  class="inputbox search tiny" id="forum_live_search" type=search placeholder="{L_LIVE_SEARCH_FORUM_TXT}"  title="{L_LIVE_SEARCH_FORUM_T}" /> &nbsp;&nbsp;
-  <!-- ENDIF  -->
-  <!-- IF LIVE_SEARCH_ON_OFF_TOPIC --> 
- {L_LIVE_SEARCH_TOPIC}: <input  class="inputbox search tiny" id="topic_live_search" type=search placeholder="{L_LIVE_SEARCH_TXT}"  title="{L_LIVE_SEARCH_T}" /> &nbsp;&nbsp;
-  <!-- ENDIF  -->
+      <!-- IF LIVE_SEARCH_ON_OFF_USER --> 
 
-  <!-- IF LIVE_SEARCH_ON_OFF_USER --> 
-
- {L_LIVE_SEARCH_USER}: 
-<input  class="inputbox search tiny" id="user_live_search" type=search placeholder="{L_LIVESEARCH_USER_TXT}"  title="{L_LIVESEARCH_USER_T}" /> 
-   <div id="user_handle" class="dropdown hidden" style="">
+     {L_LIVE_SEARCH_USER}: 
+    <input  class="inputbox search tiny" id="user_live_search" type=search placeholder="{L_LIVESEARCH_USER_TXT}"  title="{L_LIVESEARCH_USER_T}" /> 
+                                                                                       <div id="user_handle" class="dropdown hidden" style="">
 		<div class="pointer"  style="left: auto; right: 10px; ">
             <div class="pointer-inner">
         </div>
@@ -33,10 +34,11 @@
          role="menuitem">{L_LIVE_SEARCH_POSTS_BY_USER}</a></li>
 	</ul>
 				</div>
-      <!-- ENDIF  -->
+          <!-- ENDIF  -->
 
-
+</div>
   
+    <span id='leavesearch_btn_close' class="icon-button delete-icon"  title='{L_CLOSE_WINDOW}'></span>
 
 
 </div>
