--- a/styles/prosilver/theme/jquery.autocomplete.css
+++ b/styles/prosilver/theme/jquery.autocomplete.css
@@ -11,6 +11,7 @@
         border: 1px solid WindowFrame;
         background-color: Window;
         overflow: hidden;
+        z-index:2;
 }
 
 .acResults ul {
