fix win search position

--- a/styles/prosilver/template/event/overall_header_page_body_before.html
+++ b/styles/prosilver/template/event/overall_header_page_body_before.html
@@ -1,7 +1,7 @@
  <!-- IF S_LIVE_SEARCH --> 
  <div id='leavesearch_btn'>{L_LIVE_SEARCH_CAPTION}</div>
-<div id='leavesearch_panel'>
-    <div id='leavesearch' style='margin:30px 0 2 px 0;'>&nbsp; 
+
+    <div id='leavesearch' >&nbsp; 
      <!-- IF LIVE_SEARCH_ON_OFF_FORUM --> 
      {L_LIVE_SEARCH_FORUM}: <input  class="inputbox search tiny" id="forum_live_search" type=search placeholder="{L_LIVE_SEARCH_FORUM_TXT}"  title="{L_LIVE_SEARCH_FORUM_T}" /> &nbsp;&nbsp;
       <!-- ENDIF  -->
@@ -13,8 +13,8 @@
 
      {L_LIVE_SEARCH_USER}: 
     <input  class="inputbox search tiny" id="user_live_search" type=search placeholder="{L_LIVESEARCH_USER_TXT}"  title="{L_LIVESEARCH_USER_T}" /> 
-                                                                                       <div id="user_handle" class="dropdown hidden" style="">
-		<div class="pointer"  style="left: auto; right: 10px; ">
+        <div id="user_handle" class="dropdown hidden" >
+		<div class="pointer">
             <div class="pointer-inner">
         </div>
     </div>
@@ -35,13 +35,13 @@
 	</ul>
 				</div>
           <!-- ENDIF  -->
+    <span id='leavesearch_btn_close' class="icon-button delete-icon"  title='{L_CLOSE_WINDOW}'></span>
 
 </div>
   
-    <span id='leavesearch_btn_close' class="icon-button delete-icon"  title='{L_CLOSE_WINDOW}'></span>
 
 
-</div>
+
 
 <!-- ENDIF  -->
 
