--- a/styles/prosilver/theme/live_search.css
+++ b/styles/prosilver/theme/live_search.css
@@ -6,32 +6,35 @@
 	height: 16px;
 	width: 16px;
 }
-#leavesearch_panel {
-	margin-left:0px;
+
+#leavesearch,
+#leavesearch_btn {
+	border-radius: 0px 0px 10px 10px;
+	box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.2);
+	top: 0;
 	z-index: 1;
-	line-height: 18px;
+
+	margin-left:0px;
+	padding: 0 15px;
 	background-color: white;
 	position: fixed;
-	top: 0;
-	border-radius: 0px 0px 10px 10px;
-	width: 800px;
-	box-shadow: 0 2px 10px;
-	height: 30px;
+}
+#leavesearch {
+	line-height: 25px;
+	background-color: white;
+	width: 625px;
+	height: 28px;
 	display:none;
+	padding: 3px 10px;
 }
 #leavesearch_btn {
-	margin-left:-15px;
 	padding: 0 15px;
-	z-index: 20;
-	line-height: 18px;
-	background-color: white;
-	position: fixed;
-	top: 0;
-	border-radius: 0px 19px 0px;
-	box-shadow: 0 2px 10px;
-	height: 19px;
 	cursor:pointer;
+	font-weight: bold;
+	height: 16px;
 }
+
+
 #leavesearch_btn_close 
 {
     float:right; 
@@ -39,77 +42,19 @@
     cursor:pointer ;
 }
 
-#leavesearch 
+#forum_live_search {
+	width: 100px;
+}
+#topic_live_search {
+	width: 100px;
+}
+#user_live_search{
+	width: 140px;
+}
+
+#user_handle .pointer 
 {
-    line-height: 18px;
-    padding: 4px 15px;
-	position: fixed;
-	/*top: 0;*/
+    left: auto; 
+    right: 10px;
 }
 
-
-
-/*design inputbox*/
-.inputbox {
-	color: #999999;
-}
-.inputbox:-moz-placeholder {
-	color: #999999;
-	font-style: italic;
-	filter: alpha(opacity=50); /* IE 5.5+*/
-   -moz-opacity: 0.5; /* Mozilla 1.6 and less */
-   -khtml-opacity: 0.5; /* Konqueror 3.1+, Safari 1.1 */
-   opacity: 0.5; /* CSS3 - Mozilla 1.7b +, Firefox 0.9 +, Safari 1.2+, Opera 9 */
-}
-.inputbox::-webkit-input-placeholder {
-	color: #999999;
-	font-style: italic;
-	filter: alpha(opacity=50); /* IE 5.5+*/
-   -moz-opacity: 0.5; /* Mozilla 1.6 and less */
-   -khtml-opacity: 0.5; /* Konqueror 3.1+, Safari 1.1 */
-   opacity: 0.5; /* CSS3 - Mozilla 1.7b +, Firefox 0.9 +, Safari 1.2+, Opera 9 */
-}
-
-
-
-/*
-#leavesearch {
- background-color: white;
- position: fixed;
- top: 0;
- z-index: 999;
- border-radius: 5px;
- box-shadow: 0 2px 10px;
- padding: 0 10px;
- margin-left: -15px;
- width:82px;
- white-space: nowrap;
- overflow: hidden;
- -moz-transition-property: width; -moz-transition-duration: 1s; -moz-transition-delay: 20s;
- -webkit-transition-property: width; -webkit-transition-duration: 1s; -webkit-transition-delay: 20s;
- -o-transition-property: width; -o-transition-duration: 1s; -o-transition-delay: 20s;
- transition-property: width; transition-duration: 1s; transition-delay: 20s;
-
-}
-#leavesearch:hover {
- width: 670px;
- -moz-transition-property: width; -moz-transition-duration: 1s; -moz-transition-delay: 0.3s;
- -webkit-transition-property: width; -webkit-transition-duration: 1s; -webkit-transition-delay: 0.3s;
- -o-transition-property: width; -o-transition-duration: 1s; -o-transition-delay: 0.3s;
- transition-property: width; transition-duration: 1s; transition-delay: 0.3s;
-}
-
-input.search {
- border-color: #ffffff;
- background-position: 0 center;
- height: 10px;
- width: 100px;
- margin-top: -1px;
-}
-
-.search_end {
-    float: right;
-    position: absolute;
-    right: 0;
-}
-*/
