--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -18,4 +18,5 @@
 </script>
 <!-- INCLUDEJS jquery-ui.min.js -->
 <!-- INCLUDEJS jquery.autocomplete.js -->
+<!-- INCLUDEJS jquery.hoverIntent.minified.js -->
 <!-- INCLUDEJS live_search.js -->
