change button style

--- a/styles/prosilver/template/event/overall_header_page_body_before.html
+++ b/styles/prosilver/template/event/overall_header_page_body_before.html
@@ -1,5 +1,5 @@
  <!-- IF S_LIVE_SEARCH --> 
- <div id='leavesearch_btn'>{L_LIVE_SEARCH_CAPTION}</div>
+ <div id='leavesearch_btn' title="{L_LIVE_SEARCH_CAPTION}"></div>
 
     <div id='leavesearch' >&nbsp; 
      <!-- IF LIVE_SEARCH_ON_OFF_FORUM --> 
