--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -2,7 +2,16 @@
     var S_FORUM_ID = '{S_FORUM_ID}';
     var S_TOPIC_ID = '{S_TOPIC_ID}';
     var minChars_forum = '{MIN_CHARS_FORUM}';
-    
+
+    var U_FORUM_LS_PATH = '{U_FORUM_LS_PATH}';
+    var U_TOPIC_LS_PATH = '{U_TOPIC_LS_PATH}';
+    var U_USER_LS_PATH  = '{U_USER_LS_PATH}';
+    var U_USERTOPIC_LS_PATH = '{U_USERTOPIC_LS_PATH}';
+    var U_USER_PM_LS_PATH = '{U_USER_PM_LS_PATH}';
+    var U_MEMBERLIST_LS_PATH = '{U_MEMBERLIST_LS_PATH}';
+    var U_UCP_LS_PATH = '{U_UCP_LS_PATH}';
+   
+   
     var U_FORUM_REDIRECT = '{U_FORUM_REDIRECT}';
     var U_TOPIC_REDIRECT = '{U_TOPIC_REDIRECT}';
     
