--- a/styles/prosilver/theme/live_search.css
+++ b/styles/prosilver/theme/live_search.css
@@ -36,6 +36,7 @@
 	cursor:pointer;
 	font-weight: bold;
 	height: 16px;
+	display: none;
 }
 
 
@@ -62,18 +63,3 @@
     right: 10px;
 }
 
-
-
-/* Alecto */
-#leavesearch_btn {
-	background: url("/styles/prosilver/theme/images/icon_textbox_search.gif") no-repeat;
-	background-color: white;
-	border-radius: 0;
-	border-top-left-radius: 5px;
-	box-shadow: none;
-	margin-left: -15px;
-	padding: 0;
-	position: fixed;
-	top: 15px;
-	width: 15px;
-}
