show-hide button update

--- a/styles/prosilver/theme/live_search.css
+++ b/styles/prosilver/theme/live_search.css
@@ -63,3 +63,7 @@
     right: 10px;
 }
 
+
+@media screen and (max-width: 700px) {
+	#leavesearch-ShowHideBtn, #leavesearch, #leavesearch_btn { display: none !important; }
+}
