fix hidden forums

--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -23,9 +23,10 @@
     var maxItemsToShow_user = '{MAX_ITEMS_TO_SHOW_USER}';
 
     var LIVE_SEARCH_SHOW_IN_NEW_WINDOW = '{LIVE_SEARCH_SHOW_IN_NEW_WINDOW}';
+    var LIVE_SEARCH_EYE_BUTTON_OPEN_T = '{LIVE_SEARCH_EYE_BUTTON_OPEN_T}';
+    var LIVE_SEARCH_EYE_BUTTON_CLOSE_T = '{LIVE_SEARCH_EYE_BUTTON_CLOSE_T}';
 
 </script>
-<!-- INCLUDEJS jquery-ui.min.js -->
 <!-- INCLUDEJS jquery.autocomplete.js -->
 <!-- INCLUDEJS jquery.hoverIntent.minified.js -->
 <!-- INCLUDEJS live_search.js -->
