--- a/styles/prosilver/template/event/overall_header_page_body_before.html
+++ b/styles/prosilver/template/event/overall_header_page_body_before.html
@@ -14,7 +14,7 @@
       <!-- ENDIF  -->
 
       <!-- IF LIVE_SEARCH_ON_OFF_USER --> 
-     <span id="user_live_search_text" style="padding-left:10px;">{L_LIVE_SEARCH_USER}: </span><input class="inputbox search tiny" id="user_live_search" type=search placeholder="{L_LIVESEARCH_USER_TXT}"  title="{L_LIVESEARCH_USER_T}" /> 
+     <span id="user_live_search_text" style="padding-left:10px;">{L_LIVE_SEARCH_USER}: </span><input class="inputbox search tiny" id="user_live_search" type=search placeholder="{L_LIVESEARCH_USER_TXT}"  title="{L_LIVESEARCH_USER_T}" autocomplete="off" /> 
         <div id="user_handle" class="dropdown hidden" >
 		<div class="pointer">
             <div class="pointer-inner">
