--- a/styles/prosilver/template/event/posting_pm_header_find_username_after.html
+++ b/styles/prosilver/template/event/posting_pm_header_find_username_after.html
@@ -2,7 +2,7 @@
  <br />
  {L_LIVE_SEARCH_CAPTION}: 
     <div id='leavesearch_pm' style='display:inline-block' >
-    <input  class="inputbox search tiny" id="user_live_search_pm" type=search placeholder="{L_LIVESEARCH_USER_TXT}"  title="{L_LIVESEARCH_USER_T}" /> 
+    <input  class="inputbox search tiny" id="user_live_search_pm" type=search placeholder="{L_LIVESEARCH_USER_TXT}"  title="{L_LIVESEARCH_USER_T}" autocomplete="off"/> 
         
     </div>
  <!-- ENDIF  -->
