--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -29,4 +29,10 @@
 </script>
 <!-- INCLUDEJS jquery.autocomplete.js -->
 <!-- INCLUDEJS jquery.hoverIntent.minified.js -->
+<!-- IF LIVE_SEARCH_USE_EYE_BUTTON --> 
+    <!-- INCLUDEJS ../jquery.eye/jquery.eye.js -->
+    <!-- INCLUDECSS ../jquery.eye/jquery.eye.css -->
+<!-- ENDIF  -->
 <!-- INCLUDEJS live_search.js -->
+
+ 
