--- a/styles/prosilver/template/event/overall_header_head_append.html
+++ b/styles/prosilver/template/event/overall_header_head_append.html
@@ -1,2 +1,4 @@
 <!-- INCLUDECSS ../theme/jquery.autocomplete.css -->
 <!-- INCLUDECSS ../theme/live_search.css -->
+<!-- INCLUDECSS ../jquery.eye/jquery.eye.css -->
+
