--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -5,6 +5,7 @@
 
     var U_FORUM_LS_PATH = '{U_FORUM_LS_PATH}';
     var U_TOPIC_LS_PATH = '{U_TOPIC_LS_PATH}';
+    var U_SIMILARTOPIC_LS_PATH = '{U_SIMILARTOPIC_LS_PATH}';
     var U_USER_LS_PATH  = '{U_USER_LS_PATH}';
     var U_USERTOPIC_LS_PATH = '{U_USERTOPIC_LS_PATH}';
     var U_USER_PM_LS_PATH = '{U_USER_PM_LS_PATH}';
