Add search similar topics

--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -24,13 +24,15 @@
     var maxItemsToShow_user = '{MAX_ITEMS_TO_SHOW_USER}';
 
     var LIVE_SEARCH_SHOW_IN_NEW_WINDOW = '{LIVE_SEARCH_SHOW_IN_NEW_WINDOW}';
+    var LIVE_SEARCH_USE_EYE_BUTTON = '{LIVE_SEARCH_USE_EYE_BUTTON}';
     var LIVE_SEARCH_EYE_BUTTON_OPEN_T = '{LIVE_SEARCH_EYE_BUTTON_OPEN_T}';
     var LIVE_SEARCH_EYE_BUTTON_CLOSE_T = '{LIVE_SEARCH_EYE_BUTTON_CLOSE_T}';
 
 </script>
 <!-- INCLUDEJS jquery.autocomplete.js -->
-<!-- INCLUDEJS jquery.hoverIntent.minified.js -->
+<!-- INCLUDEJS jquery.hoverIntent.minified.js -->qwerty:LIVE_SEARCH_USE_EYE_BUTTON = {LIVE_SEARCH_USE_EYE_BUTTON}
 <!-- IF LIVE_SEARCH_USE_EYE_BUTTON --> 
+qwerty12345
     <!-- INCLUDEJS ../jquery.eye/jquery.eye.js -->
     <!-- INCLUDECSS ../jquery.eye/jquery.eye.css -->
 <!-- ENDIF  -->
