remove input autocomplete

--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -28,6 +28,8 @@
     var LIVE_SEARCH_EYE_BUTTON_OPEN_T = '{LIVE_SEARCH_EYE_BUTTON_OPEN_T}';
     var LIVE_SEARCH_EYE_BUTTON_CLOSE_T = '{LIVE_SEARCH_EYE_BUTTON_CLOSE_T}';
 
+    var S_SIMILARTOPIC_SHOW = '{S_SIMILARTOPIC_SHOW}';
+
 </script>
 <!-- INCLUDEJS jquery.autocomplete.js -->
 <!-- INCLUDEJS jquery.hoverIntent.minified.js -->qwerty:LIVE_SEARCH_USE_EYE_BUTTON = {LIVE_SEARCH_USE_EYE_BUTTON}
