fix custom pf fields

--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -32,9 +32,8 @@
 
 </script>
 <!-- INCLUDEJS jquery.autocomplete.js -->
-<!-- INCLUDEJS jquery.hoverIntent.minified.js -->qwerty:LIVE_SEARCH_USE_EYE_BUTTON = {LIVE_SEARCH_USE_EYE_BUTTON}
+<!-- INCLUDEJS jquery.hoverIntent.minified.js -->
 <!-- IF LIVE_SEARCH_USE_EYE_BUTTON --> 
-qwerty12345
     <!-- INCLUDEJS ../jquery.eye/jquery.eye.js -->
     <!-- INCLUDECSS ../jquery.eye/jquery.eye.css -->
 <!-- ENDIF  -->
