--- a/styles/prosilver/template/event/overall_header_page_body_before.html
+++ b/styles/prosilver/template/event/overall_header_page_body_before.html
@@ -36,7 +36,7 @@
             role="menuitem">{L_LIVE_SEARCH_TOPICS_BY_USER}
         </a></li>
 	    <li class="separator"></li>
-		<li><a id="posts_live_search" href="javascript:void(0);"
+		<li><a id="posts_live_search" href="javascript:void(0);" style=' display:none':
          title="<!-- IF S_TOPIC_ID -->{L_LIVE_SEARCH_TOOLTIP_BY_TOPIC} {TOPIC_TITLE}<!-- ELSEIF S_FORUM_ID-->{L_LIVE_SEARCH_TOOLTIP_BY_FORUM} {FORUM_NAME}<!-- ELSE -->{L_LIVE_SEARCH_TOOLTIP_ALL}<!-- ENDIF -->"  
          role="menuitem">{L_LIVE_SEARCH_POSTS_BY_USER}</a></li>
 	</ul>
