update contact fields

--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -29,6 +29,10 @@
     var LIVE_SEARCH_EYE_BUTTON_CLOSE_T = '{LIVE_SEARCH_EYE_BUTTON_CLOSE_T}';
 
     var S_SIMILARTOPIC_SHOW = '{S_SIMILARTOPIC_SHOW}';
+    var U_PROFILE = '{U_PROFILE}';
+    var U_PM = '{U_PM}';
+    var U_MAIL = '{U_MAIL}';
+    var U_JABBER = '{U_JABBER}';
 
 </script>
 <!-- INCLUDEJS jquery.autocomplete.js -->
