--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -11,6 +11,11 @@
     var U_USER_PM_LS_PATH = '{U_USER_PM_LS_PATH}';
     var U_MEMBERLIST_LS_PATH = '{U_MEMBERLIST_LS_PATH}';
     var U_UCP_LS_PATH = '{U_UCP_LS_PATH}';
+
+    var U_PROFILE_LS_PATH = '{U_PROFILE_LS_PATH}';
+    var U_PM_LS_PATH = '{U_PM_LS_PATH}';
+    var U_MAIL_LS_PATH = '{U_MAIL_LS_PATH}';
+    var U_JABBER_LS_PATH = '{U_JABBER_LS_PATH}';
    
    
     var U_FORUM_REDIRECT = '{U_FORUM_REDIRECT}';
@@ -29,14 +34,10 @@
     var LIVE_SEARCH_EYE_BUTTON_CLOSE_T = '{LIVE_SEARCH_EYE_BUTTON_CLOSE_T}';
 
     var S_SIMILARTOPIC_SHOW = '{S_SIMILARTOPIC_SHOW}';
-    var U_PROFILE = '{U_PROFILE}';
-    var U_PM = '{U_PM}';
-    var U_MAIL = '{U_MAIL}';
-    var U_JABBER = '{U_JABBER}';
 
 </script>
 <!-- INCLUDEJS jquery.autocomplete.js -->
-<!-- INCLUDEJS jquery.hoverIntent.minified.js -->
+<!-- INCLUDEJS hoverIntent.minified.js -->
 <!-- IF LIVE_SEARCH_USE_EYE_BUTTON --> 
     <!-- INCLUDEJS ../jquery.eye/jquery.eye.js -->
     <!-- INCLUDECSS ../jquery.eye/jquery.eye.css -->
