--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -8,6 +8,7 @@
     var U_SIMILARTOPIC_LS_PATH = '{U_SIMILARTOPIC_LS_PATH}';
     var U_USER_LS_PATH  = '{U_USER_LS_PATH}';
     var U_USERTOPIC_LS_PATH = '{U_USERTOPIC_LS_PATH}';
+    var U_USERPOST_LS_PATH = '{U_USERPOST_LS_PATH}';
     var U_USER_PM_LS_PATH = '{U_USER_PM_LS_PATH}';
     var U_MEMBERLIST_LS_PATH = '{U_MEMBERLIST_LS_PATH}';
     var U_UCP_LS_PATH = '{U_UCP_LS_PATH}';
