--- a/styles/prosilver/theme/live_search.css
+++ b/styles/prosilver/theme/live_search.css
@@ -74,100 +74,7 @@
 
 }
 
-/************user_topic and user_post menu********* */	
-/**
-* Breadcrumb Menu - Theme
-*/
-
-#leavesearch-menu .dropdown {
-	position: absolute;
-	font-size: 1.1em;
+.livesearch-disable {
+	opacity:0.3;
+    filter:alpha(opacity=30); 
 }
-
-#leavesearch-menu .hidden {
-	display: none;
-}
-
-#leavesearch-menu .dropdown-contents {
-	max-height: inherit;
-	max-width: 250px !important;
-	min-width: 130px;
-	overflow: visible;
-}
-
-#leavesearch-menu li {
-	margin: 0;
-	padding: 0;
-	position: relative;
-}
-
-#leavesearch-menu li:first-child {
-	border-top: none;
-	margin: 0;
-}
-
-#leavesearch-menu a {
-	display: block;
-	font-weight: normal;
-	padding: 4px 12px 4px 4px;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-}
-#leavesearch-menu .dropdown-left a {
-	padding-left: 10px;
-	padding-right: 4px;
-}
-#leavesearch-menu .children > a:before {
-	content: '\203A';
-	font-weight: bold;
-	position: absolute;
-	right: 2px;
-}
-#leavesearch-menu .dropdown-left .children > a:before {
-	content: '\2039';
-	left: 1px;
-	right: auto;
-}
-
-#leavesearch-menu a:hover,
-#leavesearch-menu .ui-state-active {
-	background: rgba(100,100,100,0.05);
-}
-#leavesearch-menu .current > a {
-	background: rgba(100,100,100,0.05);
-}
-
-#leavesearch-menu .children .dropdown-contents {
-	position: absolute;
-}
-
-#leavesearch-menu .dropdown-up {
-	padding: 0 0 9px;
-}
-#leavesearch-menu .dropdown-left .pointer {
-    left: auto;
-    right: 10px;
-}
-
-.rtl #leavesearch-menu .children > a:before {
-	content: '\2039';
-}
-.rtl #leavesearch-menu .dropdown-left .children > a:before {
-	content: '\203A';
-}
-
-
-/* responsive design */
-@media only screen and (max-width: 550px), only screen and (max-device-width: 550px) {
-	#leavesearch-menu .dropdown-contents {
-		min-width: inherit;
-	}
-}
-
-@media only screen and (max-width: 360px), only screen and (max-device-width: 360px) {
-	#leavesearch-menu .dropdown-contents {
-		max-width: 220px !important;
-	}
-}
-
