Fix for User posts >> In the forum Link doesn't work
update for overall_header_page_body_before.html file

--- a/styles/all/template/event/overall_header_page_body_before.html
+++ b/styles/all/template/event/overall_header_page_body_before.html
@@ -43,7 +43,7 @@
                         <!-- IF S_FORUM_EXCLUDE -->
                             <span  title='{L_LIVESEARCH_USERTOPIC_DISABLED}' class='livesearch-disable'>{L_LIVE_SEARCH_TOPICS_BY_USER_FORUM}</span>
                         <!-- ELSE -->
-                            <a id="posts_live_search_forum1" href="javascript:void(0);" role = "menuitem" title = "{L_LIVE_SEARCH_TOOLTIP_BY_FORUM} {FORUM_NAME}"> {L_LIVE_SEARCH_POSTS_BY_USER_FORUM}</a>
+                            <a id="posts_live_search_forum" href="javascript:void(0);" role = "menuitem" title = "{L_LIVE_SEARCH_TOOLTIP_BY_FORUM} {FORUM_NAME}"> {L_LIVE_SEARCH_POSTS_BY_USER_FORUM}</a>
                         <!-- ENDIF -->
                     </li>
                 <!-- ENDIF -->
